added drag and drop of structure, activated validation, moved dialogs to seperate xhtmls, syncronized docstruc selection of tree and treetable

--- a/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
+++ b/Kitodo/src/main/webapp/pages/incMeta/metadataEditorHeader.xhtml
@@ -59,7 +59,8 @@
 
                 </p:blockUI>
                 <div align="right">
-                    <p:button value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" disabled="true"/>
+                    <p:commandButton value="#{msgs.validieren}" icon="ui-icon-arrowrefresh-1-w" action="#{Metadaten.validate}"
+                    updade="tabView:metadata"/>
                     <p:button id="backBtn" value="#{msgs.zurueck}" outcome="/pages/ProzessverwaltungAlle"
                               icon="ui-icon-close"/>
                     <p:commandButton id="saveBtn" value="#{msgs.speichern}" action="#{Metadaten.saveMetadataToXml}"
