Refresh indexing table after end of indexing

--- a/Kitodo/src/main/webapp/pages/Indexing.xhtml
+++ b/Kitodo/src/main/webapp/pages/Indexing.xhtml
@@ -66,6 +66,7 @@
                                 PF('progressPoll').stop();
                             }
                         }
+                        $('.refreshTable').click();
                     }
 
                     function toggleButtons(state) {
