moved css files, fixed css selection in user config

--- a/Kitodo/src/main/webapp/pages/ProjekteBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/ProjekteBearbeiten.xhtml
@@ -33,7 +33,7 @@
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="inc/head.xhtml" />
         <!-- css filepath configured for mac os x -->
-        <link href="../css/tabbedPane.css" rel="stylesheet" type="text/css"/>
+        <link href="../WEB-INF/resources/css/old/userStyles/tabbedPane.css" rel="stylesheet" type="text/css"/>
 
         <h:body>
             <table class="headTable" cellspacing="0" cellpadding="0"
