--- a/Kitodo/src/main/webapp/pages/inc_indexing/indexingRow.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_indexing/indexingRow.xhtml
@@ -20,7 +20,7 @@
             <td>#{objectType.translation}</td>
             <td>
                 <p:commandButton widgetVar="startIndexing#{objectType}"
-                                 onclick="PF(objectType+'Progress').start();toggleButtons(false);"
+                                 onclick="PF('#{objectType}'+'Progress').start();toggleButtons(false);"
                                  value="#{msgs.startIndexing}"
                                  action="#{indexingForm.startIndexing(objectType)}"
                                  styleClass="indexing-button"
