--- a/Kitodo/src/main/webapp/pages/processes.xhtml
+++ b/Kitodo/src/main/webapp/pages/processes.xhtml
@@ -23,17 +23,15 @@
                 <h3>#{msgs.prozessverwaltung}</h3>
                 <p:button value="#{msgs.einenNeuenProzessAnlegen}" outcome="/pages/ProzessverwaltungBearbeiten" icon="fa fa-plus-circle fa-lg" iconPos="right" styleClass="button-filled-green"/>
                 <!-- filters -->
-                <h:form style="display: inline; float: right;">
+                <h:form id="filterMenu">
                     <div class="ui-inputgroup">
-                        <p:inputText placeholder="#{msgs.filter}" class="filter-input"/>
-                        <p:commandButton icon="fa fa-refresh" styleClass="button-blue" style="margin-left: -40px;"/>
-                        <p:commandButton id="triggerFilterMenu" icon="fa fa-chevron-down" styleClass="button-filled-blue" style="border: 0; border-radius: 0 3px 3px 0; margin-left: 3px;"/>
-                        <p:overlayPanel for="triggerFilterMenu" my="right top" at="right bottom" styleClass="filter-menu">
+                        <p:inputText placeholder="#{msgs.filter}"/>
+                        <p:commandButton type="submit" action="#{ProzessverwaltungForm.filterAll}" icon="fa fa-refresh fa-lg" styleClass="button-blue"/>
+                        <p:commandButton id="filterMenuTrigger" icon="fa fa-chevron-down" styleClass="button-filled-blue"/>
+                        <p:overlayPanel for="filterMenuTrigger" my="right top" at="right bottom">
                             <ul>
                                 <li>
-                                    <p:commandLink styleClass="button-filled-blue">
-                                        <i class="fa fa-floppy-o fa-lg"/> #{msgs.addFilter}
-                                    </p:commandLink>
+                                    <p:commandButton action="#{ProzessverwaltungForm.addFilterToUser}" icon="fa fa-floppy-o fa-lg" value="#{msgs.addFilter}"/>
                                 </li>
                                 <ui:repeat value="#{ProzessverwaltungForm.userFilters}" var="filter">
                                     <li>
