--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
@@ -72,7 +72,7 @@
         </p:column>
 
         <!-- +++++++++++++++++  alle Schritte auflisten mit Ajax ++++++++++++++++++++++++ -->
-        <p:column rendered="true" id="ajaxcolumn" style="text-align:left" sortBy="#{item.title}">
+        <p:column rendered="true" id="ajaxcolumn" style="text-align:left" sortBy="#{item.title}" filterBy="#{item.title}">
             <f:facet name="header">
                 <t:div>
                     <!-- Header -->
