--- a/Kitodo/src/main/webapp/pages/inc/Process_Filter.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc/Process_Filter.xhtml
@@ -17,14 +17,15 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:t="http://myfaces.apache.org/tomahawk"
-    >
+    xmlns:p="http://primefaces.org/ui">
+>
 
     <h:panelGrid id="myFilterGrid" width="100%" columnClasses="standardTable_ColumnRight" rowClasses="standardTable_Row"
                  columns="1">
     <h:panelGroup id="myFilter">
         <h:outputText value="#{msgs.selectFilter}: "/>
         <!-- Filter Liste -->
-        <t:selectOneMenu forceId="true" id="select" style="width:18%;" value="#{Form.filter}" onclick="setFilter();">
+        <t:selectOneMenu forceId="true" id="select" style="width:18%;" value="#{Form.filter}">
             <f:selectItems id="pcid11" value="#{Form.userFilters}" var="item" itemLabel="#{item}"
                             itemValue="#{item}"/>
         </t:selectOneMenu>
@@ -53,15 +54,13 @@
 
         <h:outputText id="aslsid7" value="#{msgs.filter}: "/>
 
-        <t:inputText style="width:20%" forceId="true" id="filterfield" value="#{Form.filter}"
-                     onkeypress="return submitEnter('FilterAlle',event)"/>
-        <t:commandButton type="submit" id="FilterAlle" forceId="true" style="display:none"
-                         action="#{Form.filterAll}"/>
+        <t:inputText style="width:20%" forceId="true" id="filterfield" value="#{Form.filter}"/>
 
-        <h:commandLink id="aslsid9" action="#{Form.filterAll}" title="#{msgs.filterAnwenden}"
-                       style="margin-left:5px">
-            <h:graphicImage id="aslsid10" alt="reload" value="/pages/images/buttons/reload.gif"/>
-        </h:commandLink>
+        <p:commandButton id="aslsid9"
+                         onclick="applyFilter(document.getElementById('filterfield').value)"
+                         title="#{msgs.filterAnwenden}"
+                         style="margin-left:5px"
+                         icon="fa fa-refresh"/>
 
         <h:outputLink id="aslsid11" target="_blank"
                       value="https://github.com/kitodo/kitodo-production/wiki/Suche-und-Filtern">
@@ -74,12 +73,29 @@
     </h:panelGrid>
     <script type="text/javascript">
         //<![CDATA[
-            function setFilter() {
-                var myFilter = document.getElementById('select').value;
-                document.getElementById('filterfield').value = myFilter;
+            function setFilter(filterString) {
+                document.getElementById('filterfield').value = filterString;
+                applyFilter(filterString);
+            }
+
+            function applyFilter(filterString) {
+                var invisibleFilter = document.getElementById('processform:auflistung:ajaxcolumn:filter');
+                invisibleFilter.value = filterString;
+                invisibleFilter.dispatchEvent(new Event('keyup'));
+            }
+
+            window.onload = function () {
+                document.getElementById('filterfield').addEventListener('change', function () {
+                    applyFilter(this.value);
+                });
+                document.getElementById('select').addEventListener('change', function () {
+                    setFilter(this.value);
+                    applyFilter(this.value);
+                });
             }
         //]]>
     </script>
+
     <!--
     <h:panelGrid id="myFilterGrid" width="100%" columnClasses="standardTable_ColumnRight" rowClasses="standardTable_Row_bottom" columns="1">
     <h:panelGroup id="myFilter">
