Adjust frontend pages for unified naming

--- a/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste.xhtml
@@ -287,7 +287,7 @@
                 </h:commandLink>
             </t:div>
         </f:facet>
-        <h:outputText value="#{item.blockedUsers.fullName}" rendered="#{item.process.blockedUsers != null}"/>
+        <h:outputText value="#{item.blockedUser.fullName}" rendered="#{item.process.blockedUser != null}"/>
     </t:column>
     
     <!-- +++++++++++++++++  Batch ID ++++++++++++++++++++++++ -->
