--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste.xhtml
@@ -166,7 +166,7 @@
 
         <p:column style="text-align:center" headerText="#{msgs.sperrungen}"
                   rendered="#{ProzessverwaltungForm.modusAnzeige!='vorlagen' and ProzessverwaltungForm.anzeigeAnpassen['lockings']}">
-            <h:outputText value="#{item.blockedUsers.fullName}" rendered="#{item.blockedUsers != null}"/>
+            <h:outputText value="#{item.blockedUser.fullName}" rendered="#{item.blockedUser != null}"/>
         </p:column>
 
         <p:column style="text-align:center" width="223px" styleClass="action" headerText="#{msgs.auswahl}">
@@ -208,7 +208,7 @@
 
             <!-- Metadaten-Schaltknopf -->
             <h:commandLink action="#{Metadaten.readXml}" id="action14" title="#{msgs.metadatenBearbeiten}"
-                           rendered="#{(LoginForm.maximaleBerechtigung != 1) and (LoginForm.maximaleBerechtigung != 2) and item.blockedUsers == null and ProzessverwaltungForm.modusAnzeige!='vorlagen'}">
+                           rendered="#{(LoginForm.maximaleBerechtigung != 1) and (LoginForm.maximaleBerechtigung != 2) and item.blockedUser == null and ProzessverwaltungForm.modusAnzeige!='vorlagen'}">
                 <h:graphicImage value="/pages/images/buttons/view1.gif" alt="view" style="margin-right:10px"/>
                 <f:param name="nurLesen" value="true"/>
                 <f:param name="ProzesseID" value="#{item.id}"/>
