--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
@@ -108,14 +108,12 @@
                                               rendered="#{ProzessverwaltungForm.task.typeCloseVerify}"/>
 
                                 <h:outputText value="#{msgs.automatischerSchritt}, "
-                                              rendered="#{ProzessverwaltungForm.task.typeAutomatic}"/>
+                                              rendered="#{ProzessverwaltungForm.task.editTypeEnum == 'AUTOMATIC'}"/>
 
                                 <h:outputText
                                         value="#{msgs.typScriptStep}(#{ProzessverwaltungForm.task.typeAutomaticScriptPath}),"
                                         rendered="#{ProzessverwaltungForm.task.typeScriptStep}"/>
 
-                                <h:outputText value="#{msgs.typAutomatisch}"
-                                              rendered="#{ProzessverwaltungForm.task.typeAutomatic}"/>
                                 <h:outputText value="#{msgs.batchStep}"
                                               rendered="#{ProzessverwaltungForm.task.batchStep}"/>
 
@@ -217,10 +215,20 @@
                         <t:selectBooleanCheckbox forceId="true" id="chkmanuell1" onclick="chkManuellAutomatischSetzen(this)"
                                                  value="#{ProzessverwaltungForm.task.typeAcceptClose}"/>
 
-
-                        <h:outputText value="#{msgs.automatischerSchritt}"/>
-                        <t:selectBooleanCheckbox forceId="true" id="chkmanuell4" onclick="chkManuellAutomatischSetzen(this)"
-                                                 value="#{ProzessverwaltungForm.task.typeAutomatic}"/>
+                        <h:outputLabel for="editType" value="#{msgs.status}"/>
+                        <h:panelGroup>
+                            <h:selectOneMenu id="editType" style="width: 300px;margin-right:15px"
+                                             value="#{ProzessverwaltungForm.task.editType}"
+                                             required="true">
+                                <f:selectItem itemValue="" itemLabel="#{msgs.bitteAuswaehlen}"/>
+                                <f:selectItem itemValue="0" itemLabel="#{msgs.taskEditTypeUnknown}"/>
+                                <f:selectItem itemValue="1" itemLabel="#{msgs.taskEditTypeManualSingle}"/>
+                                <f:selectItem itemValue="2" itemLabel="#{msgs.taskEditTypeManualMulti}"/>
+                                <f:selectItem itemValue="3" itemLabel="#{msgs.taskEditTypeAdmin}"/>
+                                <f:selectItem itemValue="4" itemLabel="#{msgs.taskEditTypeAutomatic}"/>
+                            </h:selectOneMenu>
+                            <t:message for="editType" style="color: red" replaceIdWithLabel="true"/>
+                        </h:panelGroup>
 
                         <h:outputLabel for="chkautomatisch" value="#{msgs.ScriptSchritt}"/>
                         <h:panelGroup>
@@ -263,7 +271,6 @@
 
                         <h:inputText value="#{ProzessverwaltungForm.task.stepPlugin}"
                                      style="width: 300px;margin-right:15px;"/>
-
 
                         <h:outputText value="#{msgs.validationPlugin}"/>
                         <h:inputText value="#{ProzessverwaltungForm.task.validationPlugin}"
