--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Schritte_box_DetailsKlein.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Schritte_box_DetailsKlein.xhtml
@@ -69,10 +69,10 @@
             </p:row>
         </ui:fragment>
 
-        <ui:fragment rendered="#{item.typeAutomaticScriptPath != null and item.typeAutomaticScriptPath != ''}">
+        <ui:fragment rendered="#{item.scriptPath != null and item.scriptPath != ''}">
             <p:row>
                 <p:column>#{msgs.automatischerSchritt}:</p:column>
-                <p:column>#{item.typeAutomaticScriptPath}</p:column>
+                <p:column>#{item.scriptPath}</p:column>
             </p:row>
         </ui:fragment>
 
