--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Details.xhtml
@@ -111,7 +111,7 @@
                                               rendered="#{ProzessverwaltungForm.task.typeAutomatic}"/>
 
                                 <h:outputText
-                                        value="#{msgs.typScriptStep}(#{ProzessverwaltungForm.task.typeAutomaticScriptPath}),"
+                                        value="#{msgs.typScriptStep}(#{ProzessverwaltungForm.task.scriptPath}),"
                                         rendered="#{ProzessverwaltungForm.task.typeScriptStep}"/>
 
                                 <h:outputText value="#{msgs.typAutomatisch}"
@@ -123,8 +123,8 @@
                         </tr>
 
                         <ui:fragment rendered="#{ProzessverwaltungForm.task.typeScriptStep and
-                                                ProzessverwaltungForm.task.typeAutomaticScriptPath!='' and
-                                                ProzessverwaltungForm.task.typeAutomaticScriptPath!=null}">
+                                                ProzessverwaltungForm.task.scriptPath!='' and
+                                                ProzessverwaltungForm.task.scriptPath!=null}">
                             <tr>
                                 <td width="150">
                                     <h:outputText value="#{msgs.script}:"/>
@@ -237,7 +237,7 @@
                                              value="#{ProzessverwaltungForm.task.scriptName}"/>
 
                                 <t:inputText id="txtautomatisch" forceId="true" style="width: 500px;margin-right:15px"
-                                             value="#{ProzessverwaltungForm.task.typeAutomaticScriptPath}"/>
+                                             value="#{ProzessverwaltungForm.task.scriptPath}"/>
                             </t:panelGrid>
                             <t:message for="chkautomatisch" style="color: red" replaceIdWithLabel="true"/>
                         </h:panelGroup>
